--- a/project/styles/header.css
+++ b/project/styles/header.css
@@ -1,10 +1,13 @@
-body {
-    margin: 0;
-}
 header {
-    height: 55px;
     display: flex;
     justify-content: space-between;
+    position: fixed;
+    background-color: white;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 55px;
+    border-bottom: 1px solid rgb(222, 222, 222);
 }
 .leftSection {
     display: flex;
