--- a/project/styles/general.css
+++ b/project/styles/general.css
@@ -2,4 +2,7 @@ body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding-top: 80px;
+    padding-left: 95px;
+    padding-right: 20px;
+    background-color: rgb(250, 250, 250);
 }
