--- a/project/styles/videoGrid.css
+++ b/project/styles/videoGrid.css
@@ -6,6 +6,18 @@
 }
 .thumbnail {
     margin-bottom: 12px;
+    position: relative;
+}
+.videoTime {
+    position: absolute;
+    bottom: 7px;
+    right: 4px;
+    background-color: black;
+    color: white;
+    font-size: 12px;
+    font-weight: 500;
+    padding: 2px 4px;
+    border-radius: 2px;
 }
 .thumbnail img {
     width: 100%;
