--- a/project/styles/header.css
+++ b/project/styles/header.css
@@ -47,7 +47,6 @@ header {
 .voiceSearchIcon {
     height: 24px;
     width: 24px;
-    margin-top: 4px;
 }
 .searchButton {
     width: 66px;
@@ -57,6 +56,10 @@ header {
     border-top-right-radius: 2px;
     border-bottom-right-radius: 2px;
     margin-right: 10px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .voiceSearchButton {
     height: 40px;
@@ -64,6 +67,9 @@ header {
     background-color: rgb(240, 240, 240);
     border-radius: 20px;
     border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .rightSection {
     width: 200px;
@@ -79,4 +85,27 @@ header {
     height: 30px;
     border-radius: 15px;
     margin-right: 20px;
+}
+.tooltipContent {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.searchButton .tooltip,
+.voiceSearchButton .tooltip,
+.tooltipContent .tooltip {
+    background-color: gray;
+    color: white;
+    font-size: 12px;
+    position: absolute;
+    bottom: -35px;
+    padding: 4px 8px;
+    border-radius: 3px;
+    opacity: 0;
+    transition: opacity 0.15s;
+}
+.searchButton:hover .tooltip,
+.voiceSearchButton:hover .tooltip,
+.tooltipContent:hover .tooltip {
+    opacity: 1;
 }
