--- a/project/styles/videoGrid.css
+++ b/project/styles/videoGrid.css
@@ -4,6 +4,21 @@
     column-gap: 12px;
     row-gap: 20px;
 }
+@media (max-width: 750px) {
+    .videoGrid {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media (min-width: 751px) and (max-width: 999px) {
+    .videoGrid {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+@media (min-width: 1000px) {
+    .videoGrid {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
 .thumbnail {
     margin-bottom: 12px;
     position: relative;
@@ -44,4 +59,5 @@
 .channelPhoto img {
     width: 40px;
     border-radius: 20px;
+    cursor: pointer;
 }
