--- a/project/styles/tooltip.css
+++ b/project/styles/tooltip.css
@@ -7,6 +7,7 @@
 .voiceSearchButton .tooltip,
 .tooltipContent .tooltip {
     background-color: gray;
+    width: fit-content;
     color: white;
     font-size: 12px;
     position: absolute;
